tests/negative/generics/type_param_dyn_value_not_impl.orng
fn main() -> ()!() with core::IO {
    .ok
}

fn print_anything[T](t: T) -> ()!() with core::IO {
    @print("{t}")
}
